# WhisperType

./: .gitignore  CLAUDE.md  CMakeLists.txt  Info.plist  Package.swift  README.md
scripts/: build-app.sh  create-signing-cert.sh  fetch-model.sh
src/: AudioRecorder.swift  HotkeyManager.swift  Settings.swift  WhisperRunner.swift  main.swift
